--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.1",
+    "cli-table3": "^0.6.0",
     "esm": "^3.2.25",
     "minimist": "^1.2.5"
   }
