--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "zendesk": "./index.js"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --watch"
   },
   "keywords": [],
   "author": "By Ross Lillis for Zendesk",
@@ -19,6 +19,12 @@
     "minimist": "^1.2.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.2",
+    "@babel/node": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/register": "^7.13.16",
     "chai": "^4.3.4",
     "mocha": "^8.4.0"
   }
